--- a/brewbook/package.json
+++ b/brewbook/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@storyblok/react": "^5.4.11",
+    "algoliasearch": "^5.37.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-instantsearch": "^7.16.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -20,9 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5"
   }
 }
