Algolia seed script + Storyblok Visual Editor

--- a/brewbook/package.json
+++ b/brewbook/package.json
@@ -16,7 +16,8 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-instantsearch": "^7.16.3"
+    "react-instantsearch": "^7.16.3",
+    "storyblok-rich-text-react-renderer": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
