--- a/brewbook/package.json
+++ b/brewbook/package.json
@@ -21,16 +21,19 @@
     "@heroicons/react": "^2.2.0",
     "@storyblok/react": "^5.4.11",
     "algoliasearch": "^5.37.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-instantsearch": "^7.16.3",
+    "react-leaflet": "^5.0.0",
     "storyblok-rich-text-react-renderer": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
